<resources>
    <string name="app_name">BasketBall</string>
    <string name="reset">RESET</string>
    <string name="_2_points">+2 Points</string>
    <string name="_2_points1">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="_3_points1">+3 Points</string>
    <string name="_0">0</string>
    <string name="_01">0</string>
    <string name="free_throw">Free Throw</string>
    <string name="free_throw1">Free Throw</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
</resources>
