<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.basketball.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/team_a"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:textSize="56sp"
            android:layout_marginBottom="24dp"
            android:text="@string/_0"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:id="@+id/scoreA" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:background="#F44336"
            android:text="@string/_3_points"
            android:onClick="score3A"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#F44336"
            android:text="@string/_2_points"
            android:onClick="score2A"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#F44336"
            android:text="@string/free_throw"
            android:onClick="scorefreeA"/>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/team_b"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:textSize="56sp"
            android:layout_marginBottom="24dp"
            android:text="@string/_01"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-light"
            android:id="@+id/scoreB" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:background="#F44336"
            android:text="@string/_3_points1"
            android:onClick="score3B"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#F44336"
            android:text="@string/_2_points1"
            android:onClick="score2B"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#F44336"
            android:text="@string/free_throw1"
            android:onClick="scorefreeB"/>
    </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="@string/reset"
        android:onClick="reset_Score"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        />

</RelativeLayout>
